--- a/Python Applied Modells - Projektaufgabe - C. Seidler, N. Heimbach.ipynb
+++ b/Python Applied Modells - Projektaufgabe - C. Seidler, N. Heimbach.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,9 +15,13 @@
     "**Autoren:** Christian Seidler, Nils Heimbach\n",
     "\n",
     "\n",
-    "**Verlauf:**\n",
+    "**Beschreibung:**\n",
     "Das Notebook wurde im Rahmen der Veranstaltung \"Python: Applied Modells\" des Studiengangs \"Data Engineering and Consulting\" der Hochschule Albstadt-Sigmaringen im Sommersemesters 2022 erstellt.\n",
     "***\n",
+    "\n",
+    "**Disclaimer:**\n",
+    "Das Projekt wurde im Team bearbeitet, weshalb eine Abgrenzung auf einzelne Beiträge nicht möglich ist.\n",
+    "\n",
     "\n",
     "***\n",
     "**Inhaltsverzeichnis:**\n",
@@ -612,13 +617,7 @@
       "Warnings:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
       "[2] The condition number is large, 2.94e+06. This might indicate that there are\n",
-      "strong multicollinearity or other numerical problems.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "strong multicollinearity or other numerical problems.\n",
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
       "Dep. Variable:                   Mean   R-squared:                       0.300\n",
